07 - HW - Подготовка образов с помощью Packer - добавлены фейковые ключил для packer

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-packer/service-account-id-packer-iam_key.json
-packer/variables.json
+packer/service-account-id-packer-iam_key.json_real
+packer/variables.json_real
