--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-packer/service-account-id-packer-iam_key.json_real
-packer/variables.json_real
+packer/service-account-id-packer-iam_key.json
+packer/variables.json
 *.tfstate
 *.tfstate.*.backup
 *.tfstate.backup
 *.tfvars
 .terraform/
-terraform/key.json
+*key.json
+backend.tf
 .terraform.*
