--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -7,3 +7,5 @@ private_key_path         = "~/.ssh/yc"
 subnet_id                = "fb7f7930aa114367e848"
 service_account_key_file = "key.json"
 count_instance           = 2
+app_disk_image           = "91df8e1c21feceb626c0"
+db_disk_image            = "f5b26c72a8857bc8bc79"
