09 - HW - Принципы организации инфраструктурного кода и работа над инфраструктурой в команде на примере Terraform, исправил пример для packer

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
     "folder_id": "6eVWfQYRZ0fpU3T8jIVCLnd0",
-    "service_account_key_file": "service-account-id-packer-iam_key.json",
+    "service_account_key_file": "service-account-id-packer-iam_key.json.example",
     "source_image_family": "ubuntu-1604-lts",
     "subnet_id": "G6AnmrgXixXDS3GtZh8OWuep",
     "zone": "ru-central1-a"
