--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,10 +1,16 @@
 [defaults]
-#inventory = ./inventory
-inventory = ./inventory.sh
+#inventory = ./inventory.sh
+inventory = environments/stage/inventory
 remote_user = ubuntu
 private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
 retry_files_enabled = False
+roles_path = ./roles
+vault_password_file = vault.key
 
 [inventory]
 enable_plugins = script, auto, yaml, ini, toml
+
+[diff]
+always = True
+context = 5
