15 - HW - Локальная разработка Ansible ролей с Vagrant

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ LICENSE
 *_old
 jdauphant.nginx
 vault.key
+# Vagrant & molecule
+.vagrant/
+*.log
+*.pyc
+.molecule
+.cache
+.pytest_cache
+molecule
+.yamllint
