--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -1,4 +1,5 @@
 ---
+- import_playbook: base.yml
 - import_playbook: db.yml
 - import_playbook: app.yml
 - import_playbook: deploy.yml
@@ -7,4 +8,3 @@
   become: true
   roles:
     - role: jdauphant.nginx
-- import_playbook: users.yml
